FIX backwards compatibility

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,4 +1,4 @@
 en:
   site_settings:
     abbreviations_plugin_enabled: 'Enable abbreviations plugin globally?'
-    abbreviations_plugin_list: 'Abbreviations list:'
+    abbreviations_plugin_list: 'Abbreviations list.'
