--- a/config/locales/server.es.yml
+++ b/config/locales/server.es.yml
@@ -1,4 +1,4 @@
 es:
   site_settings:
     abbreviations_plugin_enabled: '¿Habilitar plugin Abbreviations?'
-    abbreviations_plugin_list: 'Lista de abreviaturas:'
+    abbreviations_plugin_list: 'Lista de abreviaturas.'
